:bug:  fix kpi scrollbar bug for edge

--- a/frontend/scss/components/organisms/kpi-list.scss
+++ b/frontend/scss/components/organisms/kpi-list.scss
@@ -42,4 +42,7 @@
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
   width: 100%;
+  @media screen and (min-width: 768px) {
+    overflow: hidden;
+  }
 }
